--- a/index.html
+++ b/index.html
@@ -4,70 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geekathon Team-3</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 1em 0;
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-        }
-
-        .card {
-            background-color: #fff;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-            overflow: hidden;
-            margin-bottom: 20px;
-            flex: 0 0 calc(33.33% - 20px); /* Three cards in a row with some spacing */
-        }
-
-        .card img {
-            max-width: 100%;
-            height: auto;
-            border-bottom: 1px solid #ddd;
-        }
-
-        .card-content {
-            padding: 20px;
-        }
-
-        .card-title {
-            font-size: 1.5em;
-            margin-bottom: 10px;
-            color: #333;
-        }
-
-        .card-description {
-            color: #666;
-            margin-bottom: 20px;
-        }
-
-        .card-link {
-            display: block;
-            text-align: center;
-            background-color: #333;
-            color: #fff;
-            text-decoration: none;
-            padding: 10px;
-            border-radius: 5px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -146,7 +83,7 @@
             <div class="card-content">
                 <h2 class="card-title">Project 8</h2>
                 <p class="card-description">Description of Project 8.</p>
-                <a href="./codeEditorByAbhishekSharma/index.html" class="card-link">View Project</a>
+                <a href="./codeEditorByAnkitSingh/index.html" class="card-link">View Project</a>
             </div>
         </div>
 
