updated landing page

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
         <div class="card">
             <img src="project1.jpg" alt="Project 1">
             <div class="card-content">
-                <h2 class="card-title">Project 1</h2>
-                <p class="card-description">Description of Project 1.</p>
+                <h2 class="card-title">Chrome Extension</h2>
+                <p class="card-description">"Effortlessly bookmark YouTube moments with Timestamp Saver, your go-to Chrome extension for capturing video highlights at the click of a button!"</p>
+                <h4 >Crafted with passion by Jaiten Sahu</h4>
                 <a href="./chromeExtensionByJaitenSahu/popup.html" class="card-link">View Project</a>
             </div>
         </div>
@@ -25,8 +26,9 @@
         <div class="card">
             <img src="project2.jpg" alt="Project 2">
             <div class="card-content">
-                <h2 class="card-title">Project 2</h2>
-                <p class="card-description">Description of Project 2.</p>
+                <h2 class="card-title">Resume Template</h2>
+                <p class="card-description">"Unlock Your Potential: Craft a Winning Resume with Our Dynamic Template – Your Gateway to Professional Success!"</p>
+                <h4 >Fashioned by Bhumika Kumari</h4>
                 <a href="./resumeTemplateByBhumika/resume.html" class="card-link">View Project</a>
             </div>
         </div>
@@ -34,8 +36,9 @@
         <div class="card">
             <img src="project3.jpg" alt="Project 3">
             <div class="card-content">
-                <h2 class="card-title">Project 3</h2>
-                <p class="card-description">Description of Project 3.</p>
+                <h2 class="card-title">Invoice Generator</h2>
+                <p class="card-description">"Streamline your billing process effortlessly with our Invoice Generator: Create, View, Download, and Share invoices with ease, all in one place!"</p>
+                <h4 >Engineered by Ankit Singh</h4>
                 <a href="./invoiceGeneratorByAnkit/index.html" class="card-link">View Project</a>
             </div>
         </div>
