updated code and landing page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="container">
         <div class="card">
-            <img src="project1.jpg" alt="Project 1">
+            <img src="defaultimage.jpeg" alt="Project 1">
             <div class="card-content">
                 <h2 class="card-title">Chrome Extension</h2>
                 <p class="card-description">"Effortlessly bookmark YouTube moments with Timestamp Saver, your go-to Chrome extension for capturing video highlights at the click of a button!"</p>
@@ -24,7 +24,7 @@
         </div>
 
         <div class="card">
-            <img src="project2.jpg" alt="Project 2">
+            <img src="defaultimage.jpeg" alt="Project 2">
             <div class="card-content">
                 <h2 class="card-title">Resume Template</h2>
                 <p class="card-description">"Unlock Your Potential: Craft a Winning Resume with Our Dynamic Template – Your Gateway to Professional Success!"</p>
@@ -34,7 +34,7 @@
         </div>
 
         <div class="card">
-            <img src="project3.jpg" alt="Project 3">
+            <img src="ankitImage.jpeg" alt="Project 3">
             <div class="card-content">
                 <h2 class="card-title">Invoice Generator</h2>
                 <p class="card-description">"Streamline your billing process effortlessly with our Invoice Generator: Create, View, Download, and Share invoices with ease, all in one place!"</p>
@@ -44,57 +44,63 @@
         </div>
 
         <div class="card">
-            <img src="project4.jpg" alt="Project 4">
+            <img src="satvikImage.jpeg" alt="Project 4">
             <div class="card-content">
-                <h2 class="card-title">Project 4</h2>
-                <p class="card-description">Description of Project 4.</p>
+                <h2 class="card-title">Payment Integration</h2>
+                <p class="card-description">"Simplify Giving: Donate in a Click with Razorpay's Seamless Payment Integration."</p>
+                <h4>Assembled by Satvik</h4>
                 <a href="./PaymentIntegrationBySatvik/index.html" class="card-link">View Project</a>
             </div>
         </div>
 
 
         <div class="card">
-            <img src="project5.jpg" alt="Project 5">
+            <img src="abhayImage.jpeg" alt="Project 5">
             <div class="card-content">
-                <h2 class="card-title">Project 5</h2>
-                <p class="card-description">Description of Project 5.</p>
+                <h2 class="card-title">Trello Clone</h2>
+                <p class="card-description">"Effortless Task Mastery: Your Productivity, Your Way – Experience the Ultimate Trello Clone for Seamless Task Organization!"</p>
+                <h4>Curated by Abhay</h4>
                 <a href="./trelloCloneByAbhay/index.html" class="card-link">View Project</a>
             </div>
         </div>
 
         <div class="card">
-            <img src="project6.jpg" alt="Project 6">
+            <img src="amanImage.jpeg" alt="Project 6">
             <div class="card-content">
-                <h2 class="card-title">Project 2</h2>
-                <p class="card-description">Description of Project 6.</p>
+                <h2 class="card-title">Typing Speed Test Game</h2>
+                <p class="card-description">"Race against the clock and boost your fingers' agility with our exhilarating typing speed test game!"</p>
+                <h4>Invented by Aman Sharma</h4>
                 <a href="./typingSpeedCheckerByAman/index.html" class="card-link">View Project</a>
             </div>
         </div>
 
 
         <div class="card">
-            <img src="project7.jpg" alt="Project 7">
+            <img src="defaultimage.jpeg" alt="Project 7">
             <div class="card-content">
-                <h2 class="card-title">Project 7</h2>
-                <p class="card-description">Description of Project 7.</p>
+                <h2 class="card-title">Mine Game</h2>
+                <p class="card-description">"Navigate the grid, dodge the danger – Mine Sweeper, where every move counts!"</p>
+                <h4>Forged by Shweta Sharma</h4>
                 <a href="./mineGameByShweta/index.html" class="card-link">View Project</a>
             </div>
         </div>
 
         <div class="card">
-            <img src="project8.jpg" alt="Project 8">
+            <img src="ankitImage.jpeg" alt="Project 8">
             <div class="card-content">
-                <h2 class="card-title">Project 8</h2>
-                <p class="card-description">Description of Project 8.</p>
+                <h2 class="card-title">Code Editor</h2>
+                <p class="card-description">"Elevate your coding experience with real-time feedback – HTML, CSS, JS, and live output, all in one dynamic editor."</p>
+                <h4>Masterminded by Ankit Singh</h4>
                 <a href="./codeEditorByAnkitSingh/index.html" class="card-link">View Project</a>
             </div>
         </div>
 
         <div class="card">
-            <img src="project9.jpg" alt="Project 9">
+            <img src="defaultimage.jpeg" alt="Project 9">
             <div class="card-content">
-                <h2 class="card-title">Project 9</h2>
-                <p class="card-description">Description of Project 9.</p>
+                <h2 class="card-title">Flipkart Page Sort & Filter</h2>
+                <p class="card-description">"Effortless Shopping, Seamless Sorting: Elevate Your Flipkart Experience with Intuitive Page Sort and Filter Features!"</p>
+                <h4>Designed with flair by Jaiten Sahu</h4>
                 <a href="project9.html" class="card-link">View Project</a>
             </div>
         </div>
