--- a/mineGameByShweta/index.html
+++ b/mineGameByShweta/index.html
@@ -12,7 +12,7 @@
 </div> 
 <br>
 <button id="flag-button">🚩</button>
+<button id="reset">Try Again</button>
 <script src="./script.js"></script>
 </body>
 </html>
-
