--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="container">
         <div class="card">
-            <img src="defaultimage.jpeg" alt="Project 1">
+            <img src="jaitenImage.jpeg" alt="Project 1">
             <div class="card-content">
                 <h2 class="card-title">Chrome Extension</h2>
                 <p class="card-description">"Effortlessly bookmark YouTube moments with Timestamp Saver, your go-to Chrome extension for capturing video highlights at the click of a button!"</p>
@@ -96,7 +96,7 @@
         </div>
 
         <div class="card">
-            <img src="defaultimage.jpeg" alt="Project 9">
+            <img src="jaitenImage.jpeg" alt="Project 9">
             <div class="card-content">
                 <h2 class="card-title">Flipkart Page Sort & Filter</h2>
                 <p class="card-description">"Effortless Shopping, Seamless Sorting: Elevate Your Flipkart Experience with Intuitive Page Sort and Filter Features!"</p>
