--- a/PaymentIntegrationBySatvik/index.html
+++ b/PaymentIntegrationBySatvik/index.html
@@ -12,7 +12,7 @@
   <nav class="navbar">
     <div class="navdiv">
       <div class="logo"><a href="#">Spark Foundation</a></div>
-      <ul>
+      <ul class="nav-items">
         <li><a href="#">Home</a></li>
         <li><a href="#">Donations</a></li>
         <li><a href="#">About</a></li>
@@ -136,22 +136,28 @@
           </ul>
         </div>
         <div class="footer-item">
-          <h3>Spark Foundation</h3>
+          <h5>Spark Foundation</h5>
           <br />
           <ul>
             <li>About</li>
+            <br>
             <li>Donations</li>
+            <br>
             <li>FAQs</li>
+            <br>
             <li>Privacy Policy</li>
           </ul>
         </div>
         <div class="footer-item">
-          <h3>Spark Foundation</h3>
+          <h5>Spark Foundation</h5>
           <br />
           <ul>
             <li>About</li>
+            <br>
             <li>Donations</li>
+            <br>
             <li>FAQs</li>
+            <br>
             <li>Privacy Policy</li>
           </ul>
         </div>
