Chrome Extension completed

--- a/chromeExtensionByJaitenSahu/popup.html
+++ b/chromeExtensionByJaitenSahu/popup.html
@@ -9,24 +9,9 @@
 </head>
 
 <body>
-    <h3>No bookmark yet</h3>
-    <!-- <div class="bookmark">
-        <table>
-            <tr>
-                <td>
-                    <p>Bookmark At 05:30</p>
-                </td>
-                <td><img src="./Assets/video-play-icon-24 (1).png" alt=""></td>
-                <td> <img src="./Assets/Delete-Red-X-Button-PNG-HD-Image.png" alt=""></td>
-            </tr>
-        </table> -->
-
-
-
-    </div>
-    <table class="timeStamp"></table>
-    <!-- <button class="customIcon ytp-right-controls"><i class="fa-solid fa-bookmark"></i></button>
-    <script src="https://kit.fontawesome.com/7c5861f7d9.js" crossorigin="anonymous"></script> -->
+    <h3 class="heading">No Bookmark Yet</h3>
+    <table class="timeStamp">
+    </table>
     <script src="popup.js"></script>
 </body>
 
