--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 
         <div class="card">
-            <img src="defaultimage.jpeg" alt="Project 7">
+            <img src="shwetaImage.jpeg" alt="Project 7">
             <div class="card-content">
                 <h2 class="card-title">Mine Game</h2>
                 <p class="card-description">"Navigate the grid, dodge the danger – Mine Sweeper, where every move counts!"</p>
