updated html invoice

--- a/invoiceGeneratorByAnkit/index.html
+++ b/invoiceGeneratorByAnkit/index.html
@@ -120,7 +120,7 @@
         <button onclick="viewBill()">View Bill</button>
         <button onclick="downloadBill()">Download Bill</button>
         <button onclick="generateQRCode()">QR Code</button>
-        <div id="billContent" style="display: none"></div>
+        <div id="billContent" style="display: none; margin-top: 15px;"></div>
         <div id="downloadContent" style="display: none"></div>
         <div id="qrCodeContent" style="display: none"></div>
         <div id="qrcode" style="display: none"></div>
