--- a/flipKartByJaitenSahu/index.html
+++ b/flipKartByJaitenSahu/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Flipkark </title>
+    <title>Flipkart</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Symbols+Outlined" rel="stylesheet" />
 
