--- a/resumeTemplateByBhumika/resume.html
+++ b/resumeTemplateByBhumika/resume.html
@@ -20,8 +20,8 @@
                 <div class="form">
                     <label>Template type</label>
                     <select name="" id="resumeTpes">
-                        <option value="">TwoColumns</option>
-                        <option value="">Minimalist</option>
+                        <option value="TwoColumns">TwoColumns</option>
+                        <option value="Minimalist">Minimalist</option>
                     </select>
                     <label for="">Header Color</label>
                     <input type="color" id="headrcolor" class="coler">
