--- a/flipKartByJaitenSahu/index.html
+++ b/flipKartByJaitenSahu/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header class="navbar">
-
+        <div class="mainNav">
         <section class="left">
 
             <div class="logo-container">
@@ -53,7 +53,7 @@
                 <a href="">Cart</a>
             </div>
         </div>
-
+    </div>
     </header>
     <main>
         <section class="collection">
